--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,3 +1,8 @@
 <div ng-init="init()">
 	<h1>Welcome to Dynasty Dashboard</h1>
+	<span ng-show="user">
+		<a href="#/user/{{user.uid}}" ng-show="user">
+			Go to Dashboard.
+		</a>
+	</span>
 </div>
