--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,7 +1,7 @@
 <div ng-init="init()">
 	<h1>Welcome to Dynasty Dashboard</h1>
 	<span ng-show="user">
-		<a href="#/user/{{user.uid}}" ng-show="user">
+		<a href="#/dashboard" ng-show="user">
 			Go to Dashboard.
 		</a>
 	</span>
