Adding starting code for trade value

--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -15,7 +15,7 @@
 	</div>
 	<div ng-show="validMflCookies()">
 		<div ng-show="league">
-			{{league.name}} - {{leagueInfoById[league.franchise_id].name}}
+			<h1>{{league.name}} - {{leagueInfoById[league.franchise_id].name}}</h1>
 			<h3>Players</h3>
 			<div ng-repeat="player in leagueAssetsById[league.franchise_id].players.player">
 				{{displayPlayer(player.id).name}} {{displayPlayer(player.id).team}} {{displayPlayer(player.id).position}}
