--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
 		  <div class="container">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
-				<a class="navbar-brand" href="#/">
-					LOGO
-				</a>
+				<h1><a class="navbar-brand" href="#/">
+					DYNASTY DASHBOARD
+				</a></h1>
 		    </div>
 
 		    <p class="navbar-text font-larger"><b>{{pageTitle}}</b></p>
