--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -32,23 +32,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<h3>Players</h3>
-					<div class="card" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | orderBy:orderFunction:true">
-						<div class="card-number">
-							<span class="lap-number">{{cache.mfl.players[player.id].position}}</span>
-						</div>
-						<div class="card-info">
-							{{cache.mfl.players[player.id].name}} {{cache.mfl.players[player.id].team}} {{showBirthdate(cache.mfl.players[player.id].birthdate)}}
-							<div class="card-times">
-								<div>
-									<div class="lap-time">{{cache.dynasty101.players[player.id].tier}} {{cache.dynasty101.players[player.id].value}}</div>
-								</div>
-							</div>
-						</div>
+				<div class="col-md-3">
+					<h3>Studs</h3>
+					<div class="card" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:studsFilterFunction | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'"></span>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
+					<h3>Stash</h3>
+					<div class="card" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:stashFilterFunction | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'"></span>
+					</div>
+				</div>
+				<div class="col-md-3">
 					<h3>Picks</h3>
 					<div class="card" ng-repeat="draftPick in leagueAssetsById[league.franchise_id].futureYearDraftPicks.draftPick">
 						<div class="card-number">
@@ -59,7 +55,22 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
+					<h3>Compare</h3>
+					<div class="form-group">
+						<label class="control-label" for="playerSelect">Players</label>
+						<div class="flex-import">
+							<select class="form-control" id="playerSelect" multiple="multiple" data-placeholder="Select Players">
+							</select>
+						</div>
+					</div>
+					<div class="card" ng-repeat="player in searchResults | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'"></span>
+					</div>
+					<h4>Watch List</h4>
+					<div class="card" ng-repeat="player in myWatchList.myWatchList.player | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'"></span>
+					</div>
 				</div>
 			</div>
 		</span>
