--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -29,15 +29,15 @@
 			<div class="row">
 				<div class="col-md-3 scroll">
 					<h3>Studs</h3>
-					<div class="card" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:studsFilterFunction | orderBy:orderFunction:true">
-						<span ng-include="'pages/player-card.html'"></span>
+					<div class="card left-nav-lap" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:studsFilterFunction | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'" ng-init="showOwner = false"></span>
 					</div>
 					<h3>Stash</h3>
-					<div class="card" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:stashFilterFunction | orderBy:orderFunction:true">
-						<span ng-include="'pages/player-card.html'"></span>
+					<div class="card left-nav-lap" ng-repeat="player in leagueAssetsById[league.franchise_id].players.player | filter:stashFilterFunction | orderBy:orderFunction:true">
+						<span ng-include="'pages/player-card.html'" ng-init="showOwner = false"></span>
 					</div>
 					<h3>Picks</h3>
-					<div class="card" ng-repeat="draftPick in leagueAssetsById[league.franchise_id].futureYearDraftPicks.draftPick">
+					<div class="card left-nav-lap" ng-repeat="draftPick in leagueAssetsById[league.franchise_id].futureYearDraftPicks.draftPick">
 						<div class="card-number">
 							<span class="lap-number">{{estimatedPick(draftPick.description)}}</span>
 						</div>
@@ -55,20 +55,76 @@
 					Lineup | Trade | Waivers
 				</div>
 				<div class="col-md-3 scroll">
-					<h3>Compare</h3>
-					<div class="form-group">
-						<label class="control-label" for="playerSelect">Players</label>
-						<div class="flex-import">
-							<select class="form-control" id="playerSelect" multiple="multiple" data-placeholder="Select Players">
-							</select>
+					<button class="text-left width-100 no-padding btn btn-primary btn-lg collapse-control" type="button" data-toggle="collapse" data-target="#other-teams-collapse" aria-expanded="false" aria-controls="other-teams-collapse" ng-click="otherTeamsExpanded = !otherTeamsExpanded">
+						<h4>
+							<i class="fas fa-plus-square" ng-hide="otherTeamsExpanded"></i>
+							<i class="fas fa-minus-square" ng-show="otherTeamsExpanded"></i>
+							<span class="color-grey text-larger">Other Teams</span>
+						</h4>
+					</button> 
+					<div class="collapse" id="other-teams-collapse">
+						<div class="no-margin-top form-group">
+							<label class="control-label" for="otherTeamSelect">Teams</label>
+							<div class="flex-import">
+								<select class="form-control" id="otherTeamSelect" data-placeholder="Select Team">
+								</select>
+							</div>
+						</div>
+						<span ng-show="compareOtherTeamId">
+							<h3>Studs</h3>
+							<div class="card left-nav-lap" ng-repeat="player in leagueAssetsById[compareOtherTeamId].players.player | filter:studsFilterFunction | orderBy:orderFunction:true">
+								<span ng-include="'pages/player-card.html'" ng-init="showOwner = false"></span>
+							</div>
+							<h3>Stash</h3>
+							<div class="card left-nav-lap" ng-repeat="player in leagueAssetsById[compareOtherTeamId].players.player | filter:stashFilterFunction | orderBy:orderFunction:true">
+								<span ng-include="'pages/player-card.html'" ng-init="showOwner = false"></span>
+							</div>
+							<h3>Picks</h3>
+							<div class="card" ng-repeat="draftPick in leagueAssetsById[compareOtherTeamId].futureYearDraftPicks.draftPick">
+								<div class="card-number">
+									<span class="lap-number">{{estimatedPick(draftPick.description)}}</span>
+								</div>
+								<div class="card-info">
+									{{draftPick.description}}
+									<div class="card-times">
+										<div>
+											<div class="lap-time">{{cache.dynasty101.picks[dynasty101PickKeyFromMFLPickDescription(draftPick.description)].tier}} {{cache.dynasty101.picks[dynasty101PickKeyFromMFLPickDescription(draftPick.description)].value}}</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</span>
+					</div>
+					<button class="text-left width-100 no-padding btn btn-primary btn-lg collapse-control" type="button" data-toggle="collapse" data-target="#player-search-collapse" aria-expanded="false" aria-controls="player-search-collapse" ng-click="playerSearchExpanded = !playerSearchExpanded">
+						<h4>
+							<i class="fas fa-plus-square" ng-hide="playerSearchExpanded"></i>
+							<i class="fas fa-minus-square" ng-show="playerSearchExpanded"></i>
+							<span class="color-grey text-larger">Player Search</span>
+						</h4>
+					</button> 
+					<div class="collapse" id="player-search-collapse">
+						<div class="no-margin-top form-group">
+							<label class="control-label" for="playerSelect">Players</label>
+							<div class="flex-import">
+								<select class="form-control" id="playerSelect" multiple="multiple" data-placeholder="Select Players">
+								</select>
+							</div>
+						</div>
+						<div class="card left-nav-lap" ng-repeat="player in searchResults | orderBy:orderFunction:true">
+							<span ng-include="'pages/player-card.html'" ng-init="showOwner = true"></span>
 						</div>
 					</div>
-					<div class="card" ng-repeat="player in searchResults | orderBy:orderFunction:true">
-						<span ng-include="'pages/player-card.html'"></span>
-					</div>
-					<h4>Watch List</h4>
-					<div class="card" ng-repeat="player in myWatchList.myWatchList.player | orderBy:orderFunction:true">
-						<span ng-include="'pages/player-card.html'"></span>
+					<button class="text-left width-100 no-padding btn btn-primary btn-lg collapse-control" type="button" data-toggle="collapse" data-target="#watch-list-collapse" aria-expanded="false" aria-controls="watch-list-collapse" ng-click="watchListExpanded = !watchListExpanded">
+						<h4>
+							<i class="fas fa-plus-square" ng-hide="watchListExpanded"></i>
+							<i class="fas fa-minus-square" ng-show="watchListExpanded"></i>
+							<span class="color-grey text-larger">My Watch List</span>
+						</h4>
+					</button> 
+					<div class="collapse" id="watch-list-collapse">
+						<div class="card left-nav-lap" ng-repeat="player in myWatchList.myWatchList.player | orderBy:orderFunction:true">
+							<span ng-include="'pages/player-card.html'" ng-init="showOwner = true"></span>
+						</div>
 					</div>
 				</div>
 			</div>
