--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -51,7 +51,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 main-area">
 					Lineup | Trade | Waivers
 				</div>
 				<div class="col-md-3 scroll">
