--- a/src/pages/pick-card.html
+++ b/src/pages/pick-card.html
@@ -1,4 +1,4 @@
-<div class="card left-nav-lap">
+<div class="card left-nav-lap" ng-class="isSelectedPick(draftPick, type)" ng-click="openDropdown($event, 'dropdown-' + type + '-pick-' + dynasty101PickKeyFromMFLPickDescription(draftPick.description))">
 	<div class="card-number">
 		<span class="lap-number">{{estimatedPick(draftPick.description)}}</span>
 	</div>
@@ -13,6 +13,19 @@
 	<div>
 		<div class="lap-time">
 			<i class="fas fa-crown"></i> {{cache.dynasty101.picks[dynasty101PickKeyFromMFLPickDescription(draftPick.description)].tier}} {{cache.dynasty101.picks[dynasty101PickKeyFromMFLPickDescription(draftPick.description)].value}}
+		</div>
+	</div>
+	<div class="card-icon">
+		<div class="dropdown">
+			<a href="#" class="kebab-black" ng-click="openDropdown($event, 'dropdown-' + type + '-pick-' + dynasty101PickKeyFromMFLPickDescription(draftPick.description))" data-toggle="dropdown">&nbsp;<i class="fa fa-ellipsis-v"></i></a>
+			<ul class="lap-dropdown dropdown-menu" id="dropdown-{{type}}-pick-{{dynasty101PickKeyFromMFLPickDescription(draftPick.description)}}">
+				<li class="width-100 lap-menu-item">
+					<a class="lap-menu-link width-100" href="#" ng-click="selectPickKebab(draftPick, $event, 'dropdown-' + type + '-pick-' + ynasty101PickKeyFromMFLPickDescription(draftPick.description), type)">
+						<span ng-show="canSelectPick(draftPick, type)"><i class="fas fa-chart-area"></i> Analyze</span>
+						<span ng-show="canUnSelectPick(draftPick, type)"><i class="fas fa-times"></i> Deselect</span>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
