--- a/src/pages/player-card.html
+++ b/src/pages/player-card.html
@@ -1,33 +1,33 @@
-<div class="card left-nav-lap" ng-class="isSelectedPlayer(player, type)" ng-click="openDropdown($event, 'dropdown-' + type + '-player-' + player.id)">
+<div class="card left-nav-lap" ng-class="isSelectedAsset(asset, type)" ng-click="openDropdown($event, 'dropdown-' + type + '-player-' + asset.id)">
 	<div class="card-number">
-		<span class="lap-number">{{cache.mfl.players[player.id].position}}</span>
+		<span class="lap-number">{{cache.mfl.players[asset.id].position}}</span>
 	</div>
 	<div class="card-info">
-		<div ng-show="showOwner && displayPlayerRosterStatus(player.id)">
-			<strong>{{displayPlayerRosterStatus(player.id)}}</strong>
+		<div ng-show="shouldDisplayPlayerRosterStatus(asset.id, type)">
+			<strong>{{displayPlayerRosterStatus(asset.id)}}</strong>
 		</div>
 		<div>
-			{{cache.mfl.players[player.id].name}} {{cache.mfl.players[player.id].team}}
+			{{cache.mfl.players[asset.id].name}} {{cache.mfl.players[asset.id].team}}
 		</div>
 		<div class="small">
-			{{showBirthdate(cache.mfl.players[player.id].birthdate)}}
+			{{showBirthdate(cache.mfl.players[asset.id].birthdate)}}
 		</div>
 		<div class="small color-red">
-			{{injuriesById[player.id].status}}
+			{{injuriesById[asset.id].status}}
 		</div>
 	</div>
 	<div>
-		<div class="lap-time"><i class="fas fa-crown"></i> {{cache.dynasty101.players[player.id].tier}} {{cache.dynasty101.players[player.id].value}}</div>
-		<div class="lap-time"><i class="fas fa-calendar-week"></i> {{displayProjectedScore(projectedScoresById[player.id].score)}}</div>
+		<div class="lap-time"><i class="fas fa-crown"></i> {{cache.dynasty101.players[asset.id].tier}} {{cache.dynasty101.players[asset.id].value}}</div>
+		<div class="lap-time"><i class="fas fa-calendar-week"></i> {{displayProjectedScore(projectedScoresById[asset.id].score)}}</div>
 	</div>
 	<div class="card-icon">
 		<div class="dropdown">
-			<a href="#" class="kebab-black" ng-click="openDropdown($event, 'dropdown-' + type + '-player-' + player.id)" data-toggle="dropdown">&nbsp;<i class="fa fa-ellipsis-v"></i></a>
-			<ul class="lap-dropdown dropdown-menu" id="dropdown-{{type}}-player-{{player.id}}">
+			<a href="#" class="kebab-black" ng-click="openDropdown($event, 'dropdown-' + type + '-player-' + asset.id)" data-toggle="dropdown">&nbsp;<i class="fa fa-ellipsis-v"></i></a>
+			<ul class="lap-dropdown dropdown-menu" id="dropdown-{{type}}-player-{{asset.id}}">
 				<li class="width-100 lap-menu-item">
-					<a class="lap-menu-link width-100" href="#" ng-click="selectPlayerKebab(player, $event, 'dropdown-' + type + '-player-' + player.id, type)">
-						<span ng-show="canSelectPlayer(player, type)"><i class="fas fa-chart-area"></i> Analyze</span>
-						<span ng-show="canUnSelectPlayer(player, type)"><i class="fas fa-times"></i> Deselect</span>
+					<a class="lap-menu-link width-100" href="#" ng-click="selectAssetKebab(asset, $event, 'dropdown-' + type + '-player-' + asset.id, type)">
+						<span ng-show="canSelectAsset(asset, type)"><i class="fas fa-chart-area"></i> Compare</span>
+						<span ng-show="canUnSelectAsset(asset, type)"><i class="fas fa-times"></i> Deselect</span>
 					</a>
 				</li>
 			</ul>
